force-app/main/default/objects/Related_Contacts__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Lookup to Contact</description>
    <deleteConstraint>SetNull</deleteConstraint>
     <inlineHelpText>Customer or Illumina contact can be added as an Executive Summary Key Stakeholder to this Elevation. The contact will not receive any notifications from this record and is only used for Executive summary reporting.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Related_Contacts_CRF</relationshipName>
    <type>Lookup</type>
</CustomField>