force-app/main/default/objects/Related_Contacts__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Required to display this information on the Related Contact (Additional Elevation Member) using CMTD</description>
    <formula>Contact__r.FirstName +&quot; &quot;+ Contact__r.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>