force-app/main/default/objects/Related_Contacts__c/fields/Customer_Readiness_Form__c.field-meta.xml
<CustomField>
    <fullName>Customer_Readiness_Form__c</fullName>
    <description>Lookup to Customer Readiness Form</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Readiness Form</label>
    <referenceTo>Customer_Readiness_Form__c</referenceTo>
    <relationshipName>Related_Contacts_CRF</relationshipName>
    <type>Lookup</type>
</CustomField>