force-app/main/default/objects/Related_Contacts__c/fields/Download_Related_Contacts_to_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Download_Related_Contacts_to_Mobile__c</fullName>
    <description>This field is set to 1 if the associated work order is downloaded in mobile app.</description>
    <formula>IF( Work_Order__r.Download_Work_Order_to_Mobile__c == 1 , 1 , 0)</formula>
    <label>Download Related Contacts to Mobile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>