force-app/main/default/objects/Related_Contacts__c/fields/Elevated_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Elevated_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required for separating Elevation Members from Trainees and to store WO information on Elevation records.</description>
    <label>Elevated Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Related Contacts (Elevated Work Order)</relationshipLabel>
    <relationshipName>Related_Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>