force-app/main/default/objects/Related_Contacts__c/fields/FAS_Name__c.field-meta.xml
<CustomField>
    <fullName>FAS_Name__c</fullName>
    <description>Qualtrics field to send the name of the FAS who conducted for training to qualtrics</description>
    <formula>CreatedBy.FirstName + &quot; &quot; +  CreatedBy.LastName</formula>
    <label>FAS Name</label>
    <type>Text</type>
</CustomField>