force-app/main/default/objects/Related_Contacts__c/fields/Legacy_SFDC_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SFDC_Record_Id__c</fullName>
    <description>Store the record Id from legacy SFDC and would be used as external Id.</description>
    <externalId>true</externalId>
    <label>Legacy SFDC Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>