force-app/main/default/objects/Related_Contacts__c/fields/Related_Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Related_Work_Order_Status__c</fullName>
    <description>Qualtrics Surveys: Used to determine if the related work order is closed so a survey can be sent to the trainee</description>
    <formula>TEXT(Work_Order__r.SVMXC__Order_Status__c)</formula>
    <label>Related Work Order Status</label>
    <type>Text</type>
</CustomField>