force-app/main/default/objects/Related_Contacts__c/fields/Sent_to_Qualtrics__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Qualtrics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Qualtrics Surveys: Used to determine if this record has triggered a survey</description>
    <label>Sent to Qualtrics</label>
    <type>Checkbox</type>
</CustomField>