force-app/main/default/objects/Related_Contacts__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>    
    <description>Required to indicate if elevation member added from &quot;Flow&quot; or &quot;Manually&quot;.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>