force-app/main/default/objects/Related_Contacts__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Required to hold title of the representative(either a user or contact record)  when a new/additional member will be added on a techical or account elevation record.</description>
    <formula>IF(Contact__c != null, Contact__r.Title ,  User__r.Title )</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>