force-app/main/default/objects/Related_Contacts__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Required to indicate if elevation member added is a “Watcher” or “Executive Summary Key Stakeholder”on the elevation.</description>
    <inlineHelpText>Select “Type” to indicate if this individual is a “Watcher” or “Executive Summary Key Stakeholder”. Added watchers will receive internal notifications. Executive Summary Key Stakeholders are customer contacts that will not receive these internal notifications.</inlineHelpText>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Watcher (Account)</fullName>
            </value>
            <value>
                <fullName>Watcher (Technical)</fullName>
            </value>
            <value>
                <fullName>Watcher (Both)</fullName>
            </value>
            <value>
                <fullName>Executive Summary Key Stakeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>