force-app/main/default/objects/Related_Contacts__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required to hold user information and map it to elevation member</description>
    <inlineHelpText>Salesforce users (Illumina or Channel Partner) can be added as a Watcher to this Elevation.
Watchers receive notifications from Elevation records.</inlineHelpText>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>