force-app/main/default/objects/Related_Contacts__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated to show the related list of Trainee under work order</description>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Trainees</relationshipLabel>
    <relationshipName>Related_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>