force-app/main/default/objects/Related_Contacts__c/recordTypes/Elevation_Member.recordType-meta.xml
<RecordType>
    <fullName>Elevation_Member</fullName>
    <active>true</active>
    <label>Elevation Member</label>
</RecordType>