force-app/main/default/objects/Related_Contacts__c/recordTypes/Related_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Related_Contacts</fullName>
    <active>true</active>
    <label>Related Contacts</label>
</RecordType>