force-app/main/default/objects/Related_Contacts__c/validationRules/ContactAndUserBothCannotBePopulated.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactAndUserBothCannotBePopulated</fullName>
    <active>true</active>
    <description>Both Contact and User cannot be populated.</description>
    <errorConditionFormula>AND(NOT($Profile.Name ==$Label.Integration_SAP_Service),
    NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
    NOT($User.FirstName ==$Label.Automated_Process_User),
    NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
    RecordType.DeveloperName == 'Elevation_Member',
				NOT(  ISBLANK(Contact__c )) , 
							 NOT(ISBLANK( User__c )) 	  )</errorConditionFormula>
    <errorMessage>Please do not populate both Contact and User. If the individual is a DCP user, populate User. If the individual is not a DCP user, populate Contact.</errorMessage>
</ValidationRule>