force-app/main/default/objects/Related_Contacts__c/validationRules/ContactOrUserRequiredForElevation.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactOrUserRequiredForElevation</fullName>
    <active>true</active>
    <description>Contact or User is mandatory for creating Additional elevation member when record type is Elevation Member.</description>
    <errorConditionFormula>AND(NOT($Profile.Name ==$Label.Integration_SAP_Service),
    NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
    NOT($User.FirstName ==$Label.Automated_Process_User),
    NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
   (RecordType.Name = &quot;Elevation Member&quot; &amp;&amp;
 
    (ISBLANK( User__c ) &amp;&amp; ISBLANK( Contact__c ))))</errorConditionFormula>
    <errorMessage>Please identify a User or Contact before saving.</errorMessage>
</ValidationRule>