force-app/main/default/objects/Related_Contacts__c/validationRules/CustomerAndTPSPUserCannotAddWatcher.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomerAndTPSPUserCannotAddWatcher</fullName>
    <active>true</active>
    <description>Customer Contact and TPSP user cannot add Type as Watcher. Profile Id = TPSP Profile Id.</description>
    <errorConditionFormula>AND(NOT($Profile.Name ==$Label.Integration_SAP_Service),
NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
NOT($User.FirstName ==$Label.Automated_Process_User),
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
RecordType.DeveloperName == 'Elevation_Member',
OR(INCLUDES(Type__c, &apos;Watcher (Account)&apos;),INCLUDES(Type__c, &apos;Watcher (Technical)&apos;),INCLUDES(Type__c, &apos;Watcher (Both)&apos;) ) ,
OR( AND (OR(NOT(CONTAINS(Contact__r.Email , &apos;@illumina.com&apos;) ), Contact__r.Email == null),User__c==null),
 AND(User__r.Profile.Name == &apos;Field Service Third Party&apos;,Contact__c==null) ))</errorConditionFormula>
    <errorMessage>Please do not add a customer contact or Third Party Field Service user as a Watcher for this elevation. Watchers will receive internal notifications.</errorMessage>
</ValidationRule>