force-app/main/default/objects/Related_Contacts__c/validationRules/ExecutiveSummCanOnlyBeEditedByRPSFSMFAM.validationRule-meta.xml
<ValidationRule>
    <fullName>ExecutiveSummCanOnlyBeEditedByRPSFSMFAM</fullName>
    <active>true</active>
    <description>&apos;Executive Summary Key Stakeholders&apos; can be added by only RPS, FSM and FAM users.</description>
    <errorConditionFormula>AND(NOT($Profile.Name ==$Label.Integration_SAP_Service),
    NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
    NOT($User.FirstName ==$Label.Automated_Process_User), 
    NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
    RecordType.DeveloperName == 'Elevation_Member',
				NOT($Permission.RPS_FSM_FAM) , INCLUDES(Type__c, &apos;Executive Summary Key Stakeholder&apos;) )</errorConditionFormula>
    <errorMessage>You do not have permission to add Executive Summary Key Stakeholders. Please reach out to RPS or your manager for assistance on this Work Order.</errorMessage>
</ValidationRule>