force-app/main/default/objects/Related_Contacts__c/validationRules/RestrictToAddEleMemWhenNoElevation.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictToAddEleMemWhenNoElevation</fullName>
    <active>true</active>
    <description>Restrict to add Elevation Members when there is no Account or Technical Elevation added to work order.</description>
    <errorConditionFormula>AND(NOT($Profile.Name ==$Label.Integration_SAP_Service),
NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
NOT($User.FirstName ==$Label.Automated_Process_User),
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
RecordType.DeveloperName == &apos;Elevation_Member&apos;,
ISPICKVAL(Source__c,&apos;Manual&apos;),
NOT(ISPICKVAL( Elevated_Work_Order__r.Account_Elevation__r.Elevation_Status__c , &apos;Open&apos;)),
NOT(ISPICKVAL(Elevated_Work_Order__r.Technical_Elevation__r.Elevation_Status__c, &apos;Open&apos;))
)</errorConditionFormula>
    <errorMessage>Please make sure there is an open elevation for this Work Order before adding additional Elevation Member(s).</errorMessage>
</ValidationRule>